# Cedar-Notebook

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Cedar-20250820.dmg  GPT5_MIGRATION_NOTES.md  README.md  TESTING.md  build_dmg.sh  build_dmg_simple.sh  build_macos_dmg.sh  demo_ingestion_workflow.jl  fetch_api_key.sh  fix_server_issues.sh  launch_cedar_desktop.sh  process_csv.sh  render-build.sh  render-cedar.yaml  render.yaml  run_tests.sh  setup_api_key.sh  test-sse.html  test_agent_loop.py  test_api_key_error.py  test_app_direct.py  test_app_working.py  test_cedar_app.py  test_complete_upload_flow.py  test_config_validation.py  test_data.csv  test_data.json  test_e2e_upload.py  test_e2e_with_gpt5.py  test_e2e_with_retry.py  test_file_upload.py  test_final_flow.py  test_frontend_backend.py  test_full_agent_flow.py  test_llm_detailed.py  test_minimal_upload.html  (+12 more)
apps/cedar-bundle/: Bundle.toml  Cargo.toml  Cedar-20250821-complete.dmg  Cedar-20250821-final.dmg  Cedar-20250821-fixed.dmg  Cedar-20250821-tabbed.dmg  Cedar-20250821.dmg  Cedar-202508211305-stable-backup.dmg  rw.24041.Cedar-20250821.dmg  rw.93888.Cedar-20250821.dmg
apps/cedar-bundle/resources/: julia-wrapper.sh
apps/cedar-bundle/resources/julia/include/julia/: julia_version.h
apps/cedar-bundle/resources/julia/lib/: libjulia.1.10.0.dylib  libjulia.1.10.dylib
apps/cedar-bundle/resources/julia/lib/julia/: libamd.3.2.1.dylib  libamd.3.dylib  libatomic.1.dylib  libblastrampoline.5.dylib  libbtf.2.2.1.dylib  libbtf.2.dylib  libcamd.3.2.1.dylib  libcamd.3.dylib  libccalltest.dylib  libccolamd.3.2.1.dylib  libccolamd.3.dylib  libcholmod.4.2.1.dylib  libcholmod.4.dylib  libcholmod.dylib  libcolamd.3.2.1.dylib  libcolamd.3.dylib  libcurl.4.dylib  libdSFMT.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libgit2.1.6.4.dylib  libgit2.1.6.dylib  libgit2.dylib  libgmp.10.dylib  libgmpxx.4.dylib  libgomp.1.dylib  libjulia-codegen.1.10.0.dylib  libjulia-codegen.1.10.dylib  libjulia-internal.1.10.dylib  libklu.2.2.1.dylib  libklu.2.dylib  libldl.3.2.1.dylib  libldl.3.dylib  libllvmcalltest.dylib  libmbedcrypto.2.28.2.dylib  libmbedcrypto.7.dylib  libmbedtls.14.dylib  libmbedtls.2.28.2.dylib  libmbedx509.1.dylib  libmbedx509.2.28.2.dylib  (+23 more)
apps/cedar-bundle/resources/julia/lib/julia/libjulia-codegen.1.10.0.dylib.dSYM/Contents/: Info.plist
apps/cedar-bundle/resources/julia/lib/julia/libjulia-internal.1.10.0.dylib.dSYM/Contents/: Info.plist
apps/cedar-bundle/resources/julia/lib/libjulia.1.10.0.dylib.dSYM/Contents/: Info.plist
apps/cedar-bundle/resources/julia/libexec/julia/: 7z  dsymutil
apps/cedar-bundle/resources/julia_env/: Manifest.toml  Project.toml
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/AbstractTrees/: tEX7J_RM9M2.dylib  tEX7J_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/Accessors/: XelUh_RM9M2.dylib  XelUh_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/ArgCheck/: P66Js_RM9M2.dylib  P66Js_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/ArrayLayouts/: QloHc_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/ArrayLayoutsSparseArraysExt/: S7LmV_RM9M2.dylib  S7LmV_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/BangBang/: Ovsha_RM9M2.dylib  Ovsha_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/BangBangDataFramesExt/: sNKPH_RM9M2.dylib  sNKPH_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/BangBangStaticArraysExt/: I8ZlX_RM9M2.dylib  I8ZlX_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/BangBangTablesExt/: h92XF_RM9M2.dylib  h92XF_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/Baselet/: J6WYP_RM9M2.dylib  J6WYP_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/BitFlags/: sbYUO_RM9M2.dylib  sbYUO_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/BitIntegers/: UNY4L_RM9M2.dylib  UNY4L_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/CEnum/: 0gyUJ_RM9M2.dylib  0gyUJ_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/CSV/: HHBkp_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/CategoricalArrays/: RHXoP_RM9M2.dylib  RHXoP_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/CategoricalArraysJSONExt/: 948k1_RM9M2.dylib  948k1_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/CategoricalArraysSentinelArraysExt/: PVjZ6_RM9M2.dylib  PVjZ6_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/CategoricalArraysStructTypesExt/: DndfC_RM9M2.dylib  DndfC_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/ChunkCodecCore/: 54tFi_RM9M2.dylib  54tFi_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/compiled/v1.10/ChunkCodecLibBrotli/: 4lGCT_RM9M2.dylib  4lGCT_RM9M2.ji
apps/cedar-bundle/resources/julia_env/depot/logs/: artifact_usage.toml  manifest_usage.toml
apps/cedar-bundle/resources/julia_env/depot/registries/: General.toml
apps/cedar-bundle/resources/julia_env/depot/scratchspaces/44cfe95a-1eb2-52ea-b672-e2afdf69b78f/: registry_updates.toml
apps/cedar-bundle/src/: main.rs
apps/cedar-egui/: Cargo.toml
apps/cedar-egui/src/: main.rs  main_placeholder.rs
crates/cedar-cli/: Cargo.toml
crates/cedar-cli/src/: data_ingest.rs  main.rs
crates/cedar-core/: Cargo.toml
crates/cedar-core/src/: agent_loop.rs  lib.rs  llm_protocol.rs  runs.rs  util.rs
crates/cedar-core/src/executors/: julia.rs  mod.rs  shell.rs  sql_duckdb.rs
crates/notebook_api/: Cargo.toml
crates/notebook_api/src/: lib.rs  types.rs
crates/notebook_server/: Cargo.toml  build.rs  tauri.conf.json
crates/notebook_server/src/: agent_wrapper.rs  file_index.rs  file_search.rs  lib.rs  lib_native.rs  main.rs
crates/notebook_server/tests/: integration_test.rs
crates/notebook_tauri/: Cargo.toml
crates/notebook_tauri/src/: lib.rs
test_cedar_app/: Cargo.toml
test_cedar_app/src/: main.rs
(+926 files in other folders)
