[package]
name = "cedar-bundle"
version = "1.0.0"
edition = "2021"
authors = ["Cedar Team"]
description = "Cedar - AI-powered data and compute agent"
license = "Apache-2.0"

[dependencies]
# Core functionality
notebook_core = { path = "../../crates/notebook_core" }
notebook_server = { path = "../../crates/notebook_server" }

# For embedded server
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For native app window (macOS specific)
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[package.metadata.bundle]
name = "Cedar"
identifier = "com.CedarAI.Cedar"
version = "1.0.0"
copyright = "Copyright © 2025 CedarAI"
category = "Developer Tools"
short_description = "AI-powered data and compute agent"
long_description = """
Cedar is an AI-powered agent that executes Julia code, runs shell commands, 
and processes data using an LLM to interpret and respond to your queries.
"""
icon = [
    "../../crates/notebook_server/icons/32x32.png",
    "../../crates/notebook_server/icons/128x128.png",
    "../../crates/notebook_server/icons/128x128@2x.png",
    "../../crates/notebook_server/icons/icon.icns"
]
resources = ["../../apps/web-ui/"]
