[package]
name = "cedar-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
cedar-core = { path = "../cedar-core" }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
fs-err = { workspace = true }
indicatif = { workspace = true }
tempfile = "3"
axum = "0.7"
