[package]
name = "notebook_api"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
specta = { version = "2.0.0-rc.20" }
rspc = { version = "0.3" }
notebook_core = { path = "../notebook_core" }

[dev-dependencies]
tokio = { workspace = true }

# [[bin]]
# name = "export_types"
# path = "src/bin/export_types.rs"
