[package]
name = "notebook_server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notebook_api = { path = "../notebook_api" }
notebook_core = { path = "../notebook_core" }
mime_guess = "2"
serde = { workspace = true }
serde_json = { workspace = true }
