[package]
name = "notebook_server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "ws", "multipart"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notebook_api = { path = "../notebook_api" }
notebook_core = { path = "../notebook_core" }
mime_guess = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
tauri = { version = "2.0.0-beta.19", features = ["custom-protocol"] }
uuid = { workspace = true }
chrono = { workspace = true }
[build-dependencies]
tauri-build = { version = "2.0.0-beta.19" }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
