[package]
name = "notebook_server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
notebook_core = { path = "../notebook_core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
